--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -20,20 +20,20 @@
             <picture>
                 <!-- Desktop screen -->
                 <source media="(min-width: 1280px)"
-                    srcset="../img/modal-your-order/strawberry-basket-w173@1x.png 1x, ../img/modal-your-order/strawberry-basket-w173@2x.png 2x"
+                    srcset="./img/modal-your-order/strawberry-basket-w173@1x.png 1x, ./img/modal-your-order/strawberry-basket-w173@2x.png 2x"
                     type="image/jpg" />
 
                 <!-- Tablet screen -->
                 <source media="(min-width: 768px)"
-                    srcset="../img/modal-your-order/strawberry-basket-w133@1x.png 1x, ../img/modal-your-order/strawberry-basket-w133@2x.png 2x"
+                    srcset="./img/modal-your-order/strawberry-basket-w133@1x.png 1x, ./img/modal-your-order/strawberry-basket-w133@2x.png 2x"
                     type="image/jpg" />
 
                 <!-- Mobile screen -->
                 <source media="(max-width: 767px)"
-                    srcset="../img/modal-your-order/strawberry-basket-w88@1x.png 1x, ../img/modal-your-order/strawberry-basket-w88@2x.png 2x"
+                    srcset="./img/modal-your-order/strawberry-basket-w88@1x.png 1x, ./img/modal-your-order/strawberry-basket-w88@2x.png 2x"
                     type="image/png" />
 
-                <img class="basket-img" src="../img/modal-your-order/strawberry-basket-w88@1x.png" alt="strawberry"
+                <img class="basket-img" src="./img/modal-your-order/strawberry-basket-w88@1x.png" alt="strawberry"
                     height="95" loading="lazy" />
             </picture>
 
@@ -50,20 +50,20 @@
             <picture>
                 <!-- Desktop screen -->
                 <source media="(min-width: 1280px)"
-                    srcset="../img/modal-your-order/apples-basket-w229@1x.png 1x, ../img/modal-your-order/apples-basket-w229@2x.png 2x"
+                    srcset="./img/modal-your-order/apples-basket-w229@1x.png 1x, ./img/modal-your-order/apples-basket-w229@2x.png 2x"
                     type="image/png" />
 
                 <!-- Tablet screen -->
                 <source media="(min-width: 768px)"
-                    srcset="../img/modal-your-order/apples-basket-w172@1x.png 1x, ../img/modal-your-order/apples-basket-w172@2x.png 2x"
+                    srcset="./img/modal-your-order/apples-basket-w172@1x.png 1x, ./img/modal-your-order/apples-basket-w172@2x.png 2x"
                     type="image/png" />
 
                 <!-- Mobile screen -->
                 <source media="(max-width: 767px)"
-                    srcset="../img/modal-your-order/apples-basket-w106@1x.png 1x, ../img/modal-your-order/apples-basket-w106@2x.png 2x"
+                    srcset="./img/modal-your-order/apples-basket-w106@1x.png 1x, ./img/modal-your-order/apples-basket-w106@2x.png 2x"
                     type="image/jpg" />
 
-                <img class="basket-img" src="../img/modal-your-order/apples-basket-w106@1x.png" alt="apple" height="95"
+                <img class="basket-img" src="./img/modal-your-order/apples-basket-w106@1x.png" alt="apple" height="95"
                     loading="lazy" />
             </picture>
 
