--- a/src/css/your-order.css
+++ b/src/css/your-order.css
@@ -25,6 +25,9 @@
 } */
 
 .modal-order {
+
+  overflow: scroll;
+
   /* position: relative; */
   top: 50%;
   left: 50%;
@@ -52,7 +55,7 @@
   .modal-order {
     min-width: 704px;
     padding: 40px;
-      background-image: url(./img/modal-your-order/girl-with-banana-w469@1x.png);
+      background-image: url(../img/modal-your-order/girl-with-banana-w469@1x.png);
       background-repeat: no-repeat;
       background-position: 175% 100%;
   }
