--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero section">
   <div class="hero-container container">
     <div class="background">
       <img class="dec-straw" srcset="./img/opt-img/hero/strawberry-hero-mob-w56@1x.png x1,
@@ -33,7 +33,7 @@
           <div class="top-card">
             <h3 class=" top-card-text">Fruit</h3>
             <div class="thamb-hero">
-              <img class="hero-img" src="./img/hero/nwatermelon-mob@1.png" width="239" height="172" />
+              <img class="hero-img" src="./img/hero/watermelon@1.png" width="200" height="172" />
               <p class="low-card-text">
                 Refreshing and juicy, watermelon is the perfect summer treat and
                 a great source of hydration
@@ -52,9 +52,9 @@
 
           
         <div class="top-card low-card">
-          <h3 class="top-card-text">Fruit</h3>
+          <h3 class="top-card-text yellow">Fruit</h3>
           <div class="wrap-cards low-wrap">
-            <img class="hero-img hero-imglow" src="./img/hero/strawberrybox-mob@1.png" width="239" height="187" />
+            <img class="hero-img hero-imglow" src="./img/hero/strawberrybox@1.png" width="162" height="185" />
             <p class="low-card-text">
               Sweet and juicy, strawberries are packed with vitamin C and
               antioxidants, making them a delicious and healthy snack
