modal-order-finish

--- a/src/css/your-order.css
+++ b/src/css/your-order.css
@@ -52,17 +52,31 @@
   .modal-order {
     min-width: 704px;
     padding: 40px;
-      background-image: url(./img/modal-your-order/girl-with-banana-w469@1x.png);
-      background-repeat: no-repeat;
-      background-position: 175% 100%;
+    background-image: url(./img/modal-your-order/girl-with-banana-w469@1x.png);
+    background-repeat: no-repeat;
+    background-position: 175% 100%;
+  }
+  @media only screen and (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .modal-order {
+      background-image: url('./img/modal-your-order/girl-with-banana-w469@2x.png');
+    }
   }
 }
 
-  @media only screen and (min-width: 1280px) {
+@media only screen and (min-width: 1280px) {
   .modal-order {
     min-width: 891px;
-
+    background-image: url(./img/modal-your-order/girl-with-banana-w471@1x.png);
     background-position: 100% 100%;
+  }
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .modal-order {
+    background-image: url('./img/modal-your-order/girl-with-banana-w471@2x.png');
   }
 }
 
@@ -261,7 +275,7 @@
 }
 
 @media only screen and (min-width: 768px) {
-   .modal-fruit-input{
+  .modal-fruit-input {
     min-width: 360px;
     padding-top: 15px;
     padding-bottom: 15px;
@@ -293,7 +307,7 @@
 }
 
 @media only screen and (min-width: 768px) {
-   .modal-fruits-textaria{
+  .modal-fruits-textaria {
     min-width: 360px;
     padding-top: 15px;
     padding-bottom: 15px;
@@ -325,7 +339,7 @@
   color: #9dc162;
 }
 
-.modal-fruits-form{
+.modal-fruits-form {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
